Fixing the fonts' preload (1)

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 	<link rel="stylesheet" type="text/css" href="css/animate.css"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css"/>
 	
-	<link rel="preload" href="/fonts/opensans-regular.eot" as="font" type="font/embedded-opentype" crossorigin="anonymous">
-	<link rel="preload" href="/fonts/opensans-regular.woff" as="font" type="font/woff" crossorigin="anonymous">
-	<link rel="preload" href="/fonts/opensans-regular.ttf" as="font" type="font/truetype" crossorigin="anonymous">
-	<link rel="preload" href="/fonts/opensans-regular.svg" as="font" type="font/svg" crossorigin="anonymous">
-	<link rel="preload" href="/fonts/opensans-bold.eot" as="font" type="font/embedded-opentype" crossorigin="anonymous">
-	<link rel="preload" href="/fonts/opensans-bold.woff" as="font" type="font/woff" crossorigin="anonymous">
-	<link rel="preload" href="/fonts/opensans-bold.ttf" as="font" type="font/truetype" crossorigin="anonymous">
-	<link rel="preload" href="/fonts/opensans-bold.svg" as="font" type="font/svg" crossorigin="anonymous">
-	<link rel="preload" href="/fonts/opensans-semibold.eot" as="font" type="font/embedded-opentype" crossorigin="anonymous">
-	<link rel="preload" href="/fonts/opensans-semibold.woff" as="font" type="font/woff" crossorigin="anonymous">
-	<link rel="preload" href="/fonts/opensans-semibold.ttf" as="font" type="font/truetype" crossorigin="anonymous">
-	<link rel="preload" href="/fonts/opensans-semibold.svg" as="font" type="font/svg" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/opensans-regular.eot" as="font" type="font/embedded-opentype" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/opensans-regular.woff" as="font" type="font/woff" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/opensans-regular.ttf" as="font" type="font/truetype" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/opensans-regular.svg" as="font" type="font/svg" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/opensans-bold.eot" as="font" type="font/embedded-opentype" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/opensans-bold.woff" as="font" type="font/woff" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/opensans-bold.ttf" as="font" type="font/truetype" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/opensans-bold.svg" as="font" type="font/svg" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/opensans-semibold.eot" as="font" type="font/embedded-opentype" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/opensans-semibold.woff" as="font" type="font/woff" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/opensans-semibold.ttf" as="font" type="font/truetype" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/opensans-semibold.svg" as="font" type="font/svg" crossorigin="anonymous">
 </head>
 <body>
 
